Correct bought handling in routes
