# server/docs/swagger.yaml
@@ -718,6 +718,11 @@ paths:
     get:
       consumes:
       - application/json
+      parameters:
+      - description: Bought filter
+        in: query
+        name: bought
+        type: boolean
       produces:
       - application/json
       responses:
@@ -729,6 +734,8 @@ paths:
             type: array
         "400":
           description: Bad Request
+      security:
+      - ApiKeyAuth: []
       summary: Get all routes
       tags:
       - route
@@ -753,6 +760,8 @@ paths:
           description: Bad Request
         "404":
           description: Not Found
+      security:
+      - ApiKeyAuth: []
       summary: Get route by ID
       tags:
       - route
